--- a/donation_import.cfg
+++ b/donation_import.cfg
@@ -1,7 +1,7 @@
 [database]
 host=127.0.0.1
 userName=root
-password=vcnpassword
+password=password
 dbName=Money
 [csvFile]
 csvFileName=CharityDataDownload.csv
