--- a/donation_import.cfg
+++ b/donation_import.cfg
@@ -1,8 +1,8 @@
 [database]
 host=127.0.0.1
 userName=root
-password=password
+password=0Tempest
 dbName=Money
 [csvFile]
-csvFileName=CharityDataDownload.csv
+csvFileName=NganCharityDataDownload_test2.csv
 csvErrorFileName=ErrorRecords.csv
