Tested the file 'donations.py

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ donations_20160425.sql
 NganCharityDataDownload_test.csv
 NganCharityDataDownload_test2.csv
 NganCharityDataDownload_test3.csv
+out/*
