--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -1,23 +1,34 @@
 name: continuous_integration
 
-on: push
+on: [push]
 
 jobs:
-  run-tests:
+
+  build:
+
+    runs-on: [ubuntu-latest, windows-latest]
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version:
-          - "3.7"
-          - "3.8"
-          - "3.9"
-          - "3.10"
-          - "3.11"
-          - "3.12"
-          
-    name: Test
-    runs-on: ${{ matrix.os }}
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+
+    steps:
+      - name: Checkout code
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+      - uses: actions/setup-python@v4
+      - with: 
+        - python-version: ${{ matrix.python-version }}
+
+  test:
+
+    runs-on: [ubuntu-latest, windows-latest]
+    needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - name: Checkout code
