--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Set up Python
-      - uses: actions/setup-python@v4
-      - with: 
-        - python-version: ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with: 
+          python-version: ${{ matrix.python-version }}
 
   test:
     runs-on: [ubuntu-latest, windows-latest]
@@ -27,12 +27,12 @@ jobs:
 
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Set up Python
-      - uses: actions/setup-python@v4
-      - with: 
-        - python-version: ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with: 
+          python-version: ${{ matrix.python-version }}
 
       - name: Run tests with unittest
-      - run: python test_donations.py
+        run: python test_donations.py
