--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   build:
-    runs-on: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
@@ -19,7 +19,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
   test:
-    runs-on: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest
     needs: build
     strategy:
       matrix:
