--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -18,6 +18,9 @@ jobs:
         with: 
           python-version: ${{ matrix.python-version }}
 
+      - name: Install Dependencies
+        run: pip install charset-normalizer
+
   test:
     runs-on: ubuntu-latest
     needs: build
