--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -19,7 +19,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Dependencies
-        run: python -m pip install charset-normalizer .
+        run: pip install charset-normalizer
 
   test:
     runs-on: ubuntu-latest
@@ -36,6 +36,9 @@ jobs:
         uses: actions/setup-python@v4
         with: 
           python-version: ${{ matrix.python-version }}
+
+      - name: Install Dependencies
+        run: pip install charset-normalizer
 
       - name: Run tests with unittest
         run: python test_donations.py
