--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -1,13 +1,15 @@
 name: continuous_integration
 
-on: [push, pull_request]
+on: 
+  push:
+  pull_request:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-22.04, ubuntu-24.04]
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.13"]
 
     steps:
       - name: Checkout code
