--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -5,11 +5,14 @@ on:
   pull_request:
 
 jobs:
+
   build:
-    runs-on: [ubuntu-22.04, ubuntu-24.04]
     strategy:
-      matrix:
-        python-version: ["3.13"]
+    matrix:
+      os: [ubuntu-22.04, ubuntu-24.04]
+      python-version: ["3.13"]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout code
@@ -24,11 +27,14 @@ jobs:
         run: pip install charset-normalizer
 
   test:
-    runs-on: ubuntu-latest
-    needs: build
     strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+    matrix:
+      os: [ubuntu-22.04, ubuntu-24.04]
+      python-version: ["3.13"]
+
+    runs-on: ${{ matrix.os }}
+
+    needs: build
 
     steps:
       - name: Checkout code
