--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -10,16 +10,21 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-22.04, ubuntu-24.04]
-        python-version: ["3.13"]
+        python-version: ["3.10", "3.13"]
+        exclude:
+          - os: ubuntu-22.04
+            python-version: "3.13"
+          - os: ubuntu-24.04
+            python-version: "3.10"
 
     runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with: 
           python-version: ${{ matrix.python-version }}
 
@@ -30,7 +35,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-22.04, ubuntu-24.04]
-        python-version: ["3.13"]
+        python-version: ["3.10", "3.13"]
+        exclude:
+          - os: ubuntu-22.04
+            python-version: "3.13"
+          - os: ubuntu-24.04
+            python-version: "3.10"
 
     runs-on: ${{ matrix.os }}
 
@@ -38,10 +48,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with: 
           python-version: ${{ matrix.python-version }}
 
