--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -9,13 +9,8 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-22.04, ubuntu-24.04]
+        os: [ubuntu-latest]
         python-version: ["3.10", "3.13"]
-        exclude:
-          - os: ubuntu-22.04
-            python-version: "3.13"
-          - os: ubuntu-24.04
-            python-version: "3.10"
 
     runs-on: ${{ matrix.os }}
 
@@ -34,13 +29,8 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-22.04, ubuntu-24.04]
+        os: [ubuntu-latest]
         python-version: ["3.10", "3.13"]
-        exclude:
-          - os: ubuntu-22.04
-            python-version: "3.13"
-          - os: ubuntu-24.04
-            python-version: "3.10"
 
     runs-on: ${{ matrix.os }}
 
@@ -59,4 +49,4 @@ jobs:
         run: pip install charset-normalizer
 
       - name: Run tests with unittest
-        run: python test_donations.py
+        run: python -m unittest test_donations.py
